force-app/main/default/objects/Non_Standard_Exchange_Rate__c/Non_Standard_Exchange_Rate__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_NonStandardExRateOnlineHelp</customHelpPage>
    <label>指定為替</label>
    <nameField>
        <displayFormat>NE-{000000}</displayFormat>
        <label>NON STANDARD EXCHANGE RATE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>