force-app/main/default/objects/Non_Standard_Exchange_Rate__c/fields/Buying_Ex_Rate_From_Partner__c.field-meta.xml
<CustomField>
    <fullName>Buying_Ex_Rate_From_Partner__c</fullName>
    <description>Special buying ex-rate from partner</description>
    <inlineHelpText>Special buying ex-rate from partner</inlineHelpText>
    <label>Buying Exchange Rate From Partner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>