force-app/main/default/objects/Non_Standard_Exchange_Rate__c/fields/CUSTOMER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Business_Relationship__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>NON_STANDARD_EX_RATE_ALLOCATION</relationshipName>
    <type>Lookup</type>
</CustomField>