force-app/main/default/objects/Non_Standard_Exchange_Rate__c/fields/EXCHANGE_RATE__c.field-meta.xml
<CustomField>
    <fullName>EXCHANGE_RATE__c</fullName>
    <label>Standard Exchange Rate Id</label>
    <referenceTo>MgmtMaster__c</referenceTo>
    <relationshipName>Non_Standard_Exchange_Rate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>