force-app/main/default/objects/Non_Standard_Exchange_Rate__c/fields/PARTNER__c.field-meta.xml
<CustomField>
    <fullName>PARTNER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Business_Relationship__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>NON_STANDARD_EX_RATE_ALLOCATION1</relationshipName>
    <type>Lookup</type>
</CustomField>