force-app/main/default/objects/Non_Standard_Exchange_Rate__c/fields/Selling_Ex_Rate_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Selling_Ex_Rate_To_Customer__c</fullName>
    <description>Special selling ex-rate to customer</description>
    <inlineHelpText>Special selling ex-rate to customer</inlineHelpText>
    <label>Selling Exchange Rate To Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>