force-app/main/default/objects/Non_Standard_Exchange_Rate__c/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <description>Apply to customer</description>
    <label>Customer</label>
</RecordType>