force-app/main/default/objects/Non_Standard_Exchange_Rate__c/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>true</active>
    <description>Apply to partner</description>
    <label>Partner</label>
</RecordType>